--- a/src/index.html
+++ b/src/index.html
@@ -2,16 +2,15 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./styles/styles.css">
-  <title>Zamok Webview API</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Zamok Webview API</title>
 </head>
 
 <body>
-  <h1>Zamok API Demo</h1>
+	<h1 class="text-3xl font-bold">Zamok API Demo</h1>
 
-  <script src="./js/index.js"></script>
+	<script src="https://cdn.tailwindcss.com"></script>
 </body>
 
 </html>
