fix: design and enable double quotes payload

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
   <title>Zamok Webview API</title>
 </head>
 
-<body class="bg-[#F8FBFD]">
-  <h1 class="text-3xl font-bold text-[#232323]">Zamok API Demo</h1>
+<body class="bg-[#F8FBFD] p-10">
+  <h1 class="text-3xl font-bold text-[#232323] mb-10">Zamok API Demo</h1>
 
   <div class="grid grid-cols-3 gap-6 p-10 shadow w-11/12 mx-auto">
     <div class="space-y-4">
