--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,14 @@
   <title>Zamok Webview API</title>
 </head>
 
-<body class="bg-[#F8FBFD] p-10">
-  <h1 class="text-3xl font-bold text-[#232323] mb-10">Zamok API Demo</h1>
+<body class="bg-[url('./assets/lock.jpg')] bg-no-repeat bg-cover py-10 px-0 lg:px-10 h-screen w-screen flex flex-col justify-between">
+  <div class="flex justify-between items-center">
+    <h1 class="text-3xl font-bold text-[#232323]">Zamok API Demo</h1>
+    <img src="./assets/zamok-basic-0.png" id="Logo" height="30" width="60">
+    <!-- <img id="Logo" alt="Logo"> -->
+  </div>
 
-  <div class="grid grid-cols-3 gap-6 p-10 shadow w-11/12 mx-auto">
+  <div class="grid grid-cols-3 gap-6 p-10 shadow-lg rounded lg:w-11/12 mx-auto overflow-hidden max-h-[calc(100vh-150px)] bg-white">
     <div class="space-y-4">
       <div>
         <label for="action-payload" class="text-lg">ACTION</label>
@@ -20,13 +24,14 @@
     </div>
     <div>
       <p class="text-lg">Initial State</p>
-      <div class="px-4 text-white text-xl w-full" id="json-container"></div>
+      <div class="px-4 text-white text-xl w-full max-h-[calc(100vh-300px)] overflow-y-auto" id="json-container"></div>
     </div>
     <div>
       <p class="text-lg">Difference</p>
-      <div class="px-4 text-white text-xl w-full" id="json-container-2"></div>
+      <div class="px-4 text-white text-xl w-full max-h-[calc(100vh-300px)] overflow-y-auto" id="json-container-2"></div>
     </div>
   </div>
+  <div class="h-[53px]"></div>
   <script src="https://cdn.tailwindcss.com"></script>
 </body>
 
