feat: added dist folder

--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,10 @@
   <title>Zamok Webview API</title>
 </head>
 
-<body class="bg-[url('./assets/lock.jpg')] bg-no-repeat bg-cover py-10 px-0 lg:px-10 h-screen w-screen flex flex-col justify-between">
+<body class="bg-no-repeat bg-cover py-10 px-0 lg:px-10 h-screen w-screen flex flex-col justify-between">
   <div class="flex justify-between items-center">
     <h1 class="text-3xl font-bold text-[#232323]">Zamok API Demo</h1>
-    <img src="./assets/zamok-basic-0.png" id="Logo" height="30" width="60">
-    <!-- <img id="Logo" alt="Logo"> -->
+    <img src="" id="Logo" height="30" width="60">
   </div>
 
   <div class="grid grid-cols-3 gap-6 p-10 shadow-lg rounded lg:w-11/12 mx-auto overflow-hidden max-h-[calc(100vh-150px)] bg-white">
