--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
   </div>
   <div class="h-[53px]"></div>
   <script src="https://cdn.tailwindcss.com"></script>
-<script defer src="/bundle.js"></script></body>
+<script defer src="/zamok-api-demo/bundle.js"></script></body>
 
 </html>
