--- a/src/index.html
+++ b/src/index.html
@@ -22,11 +22,39 @@
       <button id="fire" class="border rounded border-[#232323] p-2 block ml-auto hover:bg-[#232323] hover:text-white transition">RUN ACTION</button>
     </div>
     <div>
-      <p class="text-lg">Initial State</p>
+      <div class="flex items-center justify-between">
+        <p class="text-lg">State</p>
+        <button id="copy" class="h-5 w-5">
+          <svg fill="#000000" height="20px" width="20px" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 330 330" xml:space="preserve">
+            <g>
+              <path d="M35,270h45v45c0,8.284,6.716,15,15,15h200c8.284,0,15-6.716,15-15V75c0-8.284-6.716-15-15-15h-45V15
+                c0-8.284-6.716-15-15-15H35c-8.284,0-15,6.716-15,15v240C20,263.284,26.716,270,35,270z M280,300H110V90h170V300z M50,30h170v30H95
+                c-8.284,0-15,6.716-15,15v165H50V30z" />
+              <path d="M155,120c-8.284,0-15,6.716-15,15s6.716,15,15,15h80c8.284,0,15-6.716,15-15s-6.716-15-15-15H155z" />
+              <path d="M235,180h-80c-8.284,0-15,6.716-15,15s6.716,15,15,15h80c8.284,0,15-6.716,15-15S243.284,180,235,180z" />
+              <path d="M235,240h-80c-8.284,0-15,6.716-15,15c0,8.284,6.716,15,15,15h80c8.284,0,15-6.716,15-15C250,246.716,243.284,240,235,240z" />
+            </g>
+          </svg>
+        </button>
+      </div>
       <div class="px-4 text-white text-xl w-full max-h-[calc(100vh-300px)] overflow-y-auto" id="json-container"></div>
     </div>
     <div>
-      <p class="text-lg">Difference</p>
+      <div class="flex items-center justify-between">
+        <p class="text-lg">Difference</p>
+        <button id="copy-difference" class="h-5 w-5">
+          <svg fill="#000000" height="20px" width="20px" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 330 330" xml:space="preserve">
+            <g>
+              <path d="M35,270h45v45c0,8.284,6.716,15,15,15h200c8.284,0,15-6.716,15-15V75c0-8.284-6.716-15-15-15h-45V15
+              c0-8.284-6.716-15-15-15H35c-8.284,0-15,6.716-15,15v240C20,263.284,26.716,270,35,270z M280,300H110V90h170V300z M50,30h170v30H95
+              c-8.284,0-15,6.716-15,15v165H50V30z" />
+              <path d="M155,120c-8.284,0-15,6.716-15,15s6.716,15,15,15h80c8.284,0,15-6.716,15-15s-6.716-15-15-15H155z" />
+              <path d="M235,180h-80c-8.284,0-15,6.716-15,15s6.716,15,15,15h80c8.284,0,15-6.716,15-15S243.284,180,235,180z" />
+              <path d="M235,240h-80c-8.284,0-15,6.716-15,15c0,8.284,6.716,15,15,15h80c8.284,0,15-6.716,15-15C250,246.716,243.284,240,235,240z" />
+            </g>
+          </svg>
+        </button>
+      </div>
       <div class="px-4 text-white text-xl w-full max-h-[calc(100vh-300px)] overflow-y-auto" id="json-container-2"></div>
     </div>
   </div>
